[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "condinst_tensorrt"
description = "TensorRT compatible CondInst implementation"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "albumentations<=1.3.0",
    "matplotlib",
    "onnxruntime",
    "opencv-python",
    "pycocotools",
    "pytorch-lightning>=1.7",
    "tensorboard",
    "torch>=1.9",
    "torchvision>=0.10",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["condinst_tensorrt"]

[tool.setuptools_scm]
