[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "condinst_tensorrt"
description = "TensorRT compatible CondInst implementation"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "albumentations<=1.3.0",
    "matplotlib",
    "opencv-python",
    "pycocotools",
    "pytorch-lightning>=1.4,<=1.7.7",
    "tensorboard",
    "torch>=1.9,<=1.10.1",
    "torchmetrics<=0.11.4",
    "torchvision>=0.10,<=0.11.2",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["condinst_tensorrt"]

[tool.setuptools_scm]
